# PredArb

./: .env.example  .gitignore  LICENSE  Makefile  README.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  auth.py  celery_app.py  dao.py  db.py  embeddings.py  grouping.py  main.py  rate_limit.py  settings.py  tasks.py  tasks_alerts.py  tasks_analysis.py  tasks_embeddings.py  tasks_grouping.py  tasks_ingest.py  types.py
backend/exchanges/: __init__.py  base.py  limitless.py  polymarket.py
backend/tests/: test_auth.py  test_dao.py  test_ev_math.py  test_fetcher_normalization.py  test_grouping_eval.py  test_rate_limit.py  test_tasks_alerts.py  test_tasks_analysis_integration.py
bot/: README.md  main.py
docs/: architecture.md
infra/ci/: github-actions.yml
infra/do/: app.yaml
infra/docker/: docker-compose.yml
infra/sql/: schema.sql
webapp/: .env.example  README.md  index.html  package.json  pnpm-lock.yaml
webapp/predarb-webapp/src/: App.jsx
webapp/src/: App.tsx  ArbFeed.tsx  Explorer.tsx  GroupView.tsx  Settings.tsx  api.ts  index.css  main.tsx
