[project]
name = "predarb-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.8.2",
  "pydantic-settings==2.4.0",
  "orjson==3.10.7",
  "python-dotenv==1.0.1",
  "supabase==2.6.0",
  "httpx==0.27.2",
  "tenacity==9.0.0",
  "redis==5.0.8",
  "celery==5.4.0",
  "rapidfuzz==3.9.6",
  "sentence-transformers==3.0.1",
]

[tool.uvicorn]
factory = false

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

